--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,5 @@
 <h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<p>
+  Welcome to {{title}}!
+  Follow the links in the navigation to get more info.
+</p>
