--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,6 +6,16 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="/">Main page</a>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link" href="/table">Table</a>
+        <a class="nav-item nav-link" href="/table?context=admin">Table as admin</a>
+      </div>
+    </div>
+    </nav>
+
     <div class="container">
       <div class="row justify-content-md-center">
         <div class="col-md-10">
